fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -138,9 +138,9 @@ section {
     margin-bottom: 20px
 }
 
-#about {
+/* #about {
     padding-top: 190px;
-}
+} */
 
 .about-content {
     display: flex;
